[issue-103] added Vuex and get API support

--- a/ui/frontend/public/index.html
+++ b/ui/frontend/public/index.html
@@ -8,7 +8,10 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <!--
+      TODO figure out if this is required
     <script src="/js/bootstrap.bundle.min.js"></script>
+    -->
 
   </head>
   <body>
